services/ping1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping1-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: ping1
  template:
    metadata:
      labels:
        app: ping1
    spec:
      containers:
        - name: ping1
          image: ghcr.io/jaewonleekor/spring-ping:0.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
