services/ping1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping1-service
spec:
  type: ClusterIP
  selector:
    app: ping1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
