services/ping2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping2-service
spec:
  type: NodePort
  selector:
    app: ping2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30082
  sessionAffinity: ClientIP
