services/ping1-virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ping-virtualservice
  namespace: default
spec:
  gateways:
    - ping-gateway
  http:
    - match:
        - uri:
          prefix: /ping1
      rewrite:
        uri: /
      route:
        - destination:
          host: ping1-service
          port: 8080
    - match:
        - uri:
          prefix: /ping2
      rewrite:
        uri: /
      route:
        - destination:
          host: ping2-service
          port: 8080
